--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Deadly Clickbait: The Dark Web Game Show</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Deadly Clickbait: The Dark Web Game Show</h1>
+    <div id="scene-container"></div>
+    <h2>Leaderboard</h2>
+    <ul id="leaderboard"></ul>
+    <script src="game.js"></script>
+    <script src="multiplayer.js"></script>
+</body>
+</html>
 
